--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -47,7 +47,7 @@
       <x>10</x>
       <y>10</y>
       <width>781</width>
-      <height>351</height>
+      <height>368</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="layout" stretch="5,30,10">
@@ -178,7 +178,7 @@
             </font>
            </property>
            <property name="text">
-            <string>06.01.2012 18:35</string>
+            <string>-</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
@@ -204,7 +204,7 @@
             <string notr="true">QLabel { color : #ff3333; }</string>
            </property>
            <property name="text">
-            <string>9° C</string>
+            <string>?° C</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
@@ -225,7 +225,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Luftfeuchtigkeit: 49 %</string>
+            <string>-</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
@@ -249,7 +249,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Wind: SW mit 14 km/h</string>
+            <string>-</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
@@ -299,7 +299,7 @@
             <string/>
            </property>
            <property name="pixmap">
-            <pixmap resource="res.qrc">:/new/prefix1/img/sunny.png</pixmap>
+            <pixmap resource="res.qrc">:/new/prefix1/img/unknown.png</pixmap>
            </property>
            <property name="scaledContents">
             <bool>true</bool>
@@ -323,7 +323,7 @@
             </font>
            </property>
            <property name="text">
-            <string>Meist sonnig</string>
+            <string>----------</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
@@ -398,7 +398,7 @@
             <string/>
            </property>
            <property name="pixmap">
-            <pixmap resource="res.qrc">:/new/prefix1/img/chance_of_tstorm.png</pixmap>
+            <pixmap resource="res.qrc">:/new/prefix1/img/unknown.png</pixmap>
            </property>
            <property name="scaledContents">
             <bool>true</bool>
@@ -429,7 +429,7 @@
               <string notr="true">QLabel { color : #ff3333; }</string>
              </property>
              <property name="text">
-              <string>11°</string>
+              <string>?°</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignCenter</set>
@@ -449,7 +449,7 @@
               <string notr="true">QLabel { color : #49caff; }</string>
              </property>
              <property name="text">
-              <string>8°</string>
+              <string>?°</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignCenter</set>
@@ -516,7 +516,7 @@
             <string/>
            </property>
            <property name="pixmap">
-            <pixmap resource="res.qrc">:/new/prefix1/img/dust.png</pixmap>
+            <pixmap resource="res.qrc">:/new/prefix1/img/unknown.png</pixmap>
            </property>
            <property name="scaledContents">
             <bool>true</bool>
@@ -547,7 +547,7 @@
               <string notr="true">QLabel { color : #ff3333; }</string>
              </property>
              <property name="text">
-              <string>11°</string>
+              <string>?°</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignCenter</set>
@@ -567,7 +567,7 @@
               <string notr="true">QLabel { color : #49caff; }</string>
              </property>
              <property name="text">
-              <string>8°</string>
+              <string>?°</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignCenter</set>
@@ -634,7 +634,7 @@
             <string/>
            </property>
            <property name="pixmap">
-            <pixmap resource="res.qrc">:/new/prefix1/img/icy.png</pixmap>
+            <pixmap resource="res.qrc">:/new/prefix1/img/unknown.png</pixmap>
            </property>
            <property name="scaledContents">
             <bool>true</bool>
@@ -665,7 +665,7 @@
               <string notr="true">QLabel { color : #ff3333; }</string>
              </property>
              <property name="text">
-              <string>11°</string>
+              <string>?°</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignCenter</set>
@@ -685,7 +685,7 @@
               <string notr="true">QLabel { color : #49caff; }</string>
              </property>
              <property name="text">
-              <string>8°</string>
+              <string>?°</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignCenter</set>
@@ -707,7 +707,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
